// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/tooltip/Tooltip render() should match snapshot when stopBubble is set 1`] = `
<div
  className="tooltip bdl-Tooltip"
  id="tooltip27"
  onClick={[Function]}
  onContextMenu={[Function]}
  onKeyPress={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="presentation"
>
  <div
    aria-hidden={false}
    aria-live="polite"
    data-testid="bdl-Tooltip"
    role="tooltip"
  >
    hi
  </div>
</div>
`;

exports[`components/tooltip/Tooltip render() should not render the close button if wasClosedByUser state is true 1`] = `
<d
  attachment="bottom center"
  classPrefix="tooltip"
  constraints={
    [
      {
        "attachment": "together",
        "to": "window",
      },
    ]
  }
  renderElement={[Function]}
  renderElementTo={<body />}
  renderTarget={[Function]}
  targetAttachment="top center"
/>
`;

exports[`components/tooltip/Tooltip render() should not render with close button if isShown is false 1`] = `
<d
  attachment="bottom center"
  classPrefix="tooltip"
  constraints={
    [
      {
        "attachment": "together",
        "to": "window",
      },
    ]
  }
  renderElement={[Function]}
  renderElementTo={<body />}
  renderTarget={[Function]}
  targetAttachment="top center"
/>
`;

exports[`components/tooltip/Tooltip render() should not render with close button if showCloseButton is false 1`] = `
<d
  attachment="bottom center"
  classPrefix="tooltip"
  constraints={
    [
      {
        "attachment": "together",
        "to": "window",
      },
    ]
  }
  renderElement={[Function]}
  renderElementTo={<body />}
  renderTarget={[Function]}
  targetAttachment="top center"
/>
`;

exports[`components/tooltip/Tooltip render() should render children only when tooltip is disabled 1`] = `
<div>
  Hello
</div>
`;

exports[`components/tooltip/Tooltip render() should render children wrapped in tether when tooltip has text missing 1`] = `
<d
  attachment="bottom center"
  classPrefix="tooltip"
  constraints={
    [
      {
        "attachment": "together",
        "to": "window",
      },
    ]
  }
  renderElement={[Function]}
  renderElementTo={
    <body>
      <div
        class="tooltip-element tooltip-enabled tooltip-abutted tooltip-abutted-left tooltip-abutted-right tooltip-abutted-top tooltip-abutted-bottom tooltip-element-attached-bottom tooltip-element-attached-center tooltip-target-attached-top tooltip-target-attached-center"
        style="top: 0px; left: 0px; position: absolute; transform: translateX(0px) translateY(0px) translateZ(0);"
      >
        <div
          aria-hidden="false"
          aria-live="polite"
          class="tooltip bdl-Tooltip"
          data-testid="bdl-Tooltip"
          id="tooltip7"
          role="tooltip"
        >
          hi
        </div>
      </div>
      <div
        data-tether-id="1"
        style="top: 0px; left: 0px; position: absolute;"
      />
      <div
        class="tooltip-element tooltip-enabled tooltip-abutted tooltip-abutted-left tooltip-abutted-right tooltip-abutted-top tooltip-abutted-bottom tooltip-element-attached-bottom tooltip-element-attached-center tooltip-target-attached-top tooltip-target-attached-center"
        style="top: 0px; left: 0px; position: absolute; transform: translateX(0px) translateY(0px) translateZ(0);"
      >
        <div
          aria-hidden="false"
          aria-live="polite"
          class="tooltip bdl-Tooltip"
          data-testid="bdl-Tooltip"
          id="tooltip8"
          role="tooltip"
        >
          hi
        </div>
      </div>
      <div
        class="tooltip-element tooltip-enabled tooltip-abutted tooltip-abutted-left tooltip-abutted-right tooltip-abutted-top tooltip-abutted-bottom tooltip-element-attached-bottom tooltip-element-attached-center tooltip-target-attached-top tooltip-target-attached-center"
        style="top: 0px; left: 0px; position: absolute; transform: translateX(0px) translateY(0px) translateZ(0);"
      >
        <div
          aria-hidden="false"
          aria-live="polite"
          class="tooltip bdl-Tooltip testing"
          data-testid="bdl-Tooltip"
          id="tooltip9"
          role="tooltip"
        >
          hi
        </div>
      </div>
      <div
        class="tooltip-element tooltip-enabled tooltip-abutted tooltip-abutted-left tooltip-abutted-right tooltip-abutted-top tooltip-abutted-bottom tooltip-element-attached-bottom tooltip-element-attached-center tooltip-target-attached-top tooltip-target-attached-center"
        style="top: 0px; left: 0px; position: absolute; transform: translateX(0px) translateY(0px) translateZ(0);"
      >
        <div
          aria-hidden="false"
          aria-live="polite"
          class="tooltip bdl-Tooltip"
          data-testid="bdl-Tooltip"
          id="tooltip15"
          role="tooltip"
        >
          hi
        </div>
      </div>
      <div
        class="tooltip-element tooltip-enabled tooltip-abutted tooltip-abutted-left tooltip-abutted-right tooltip-abutted-top tooltip-abutted-bottom tooltip-element-attached-bottom tooltip-element-attached-center tooltip-target-attached-top tooltip-target-attached-center"
        style="top: 0px; left: 0px; position: absolute; transform: translateX(0px) translateY(0px) translateZ(0);"
      >
        <div
          aria-hidden="false"
          aria-live="polite"
          class="tooltip bdl-Tooltip"
          data-testid="bdl-Tooltip"
          id="tooltip16"
          role="tooltip"
        >
          hi
        </div>
      </div>
      <div
        class="tooltip-element tooltip-enabled tooltip-abutted tooltip-abutted-left tooltip-abutted-right tooltip-abutted-top tooltip-abutted-bottom tooltip-element-attached-bottom tooltip-element-attached-center tooltip-target-attached-top tooltip-target-attached-center"
        style="top: 0px; left: 0px; position: absolute; transform: translateX(0px) translateY(0px) translateZ(0);"
      >
        <div
          aria-hidden="true"
          aria-live="polite"
          class="tooltip bdl-Tooltip"
          data-testid="bdl-Tooltip"
          id="tooltip17"
          role="tooltip"
        >
          hi
        </div>
      </div>
      <div
        class="tooltip-element tooltip-enabled tooltip-abutted tooltip-abutted-left tooltip-abutted-right tooltip-abutted-top tooltip-abutted-bottom tooltip-element-attached-bottom tooltip-element-attached-center tooltip-target-attached-top tooltip-target-attached-center"
        style="top: 0px; left: 0px; position: absolute; transform: translateX(0px) translateY(0px) translateZ(0);"
      >
        <div
          aria-hidden="true"
          aria-live="polite"
          class="tooltip bdl-Tooltip"
          data-testid="bdl-Tooltip"
          id="tooltip18"
          role="tooltip"
        >
          test
        </div>
      </div>
      <div
        class="tooltip-element tooltip-enabled tooltip-abutted tooltip-abutted-left tooltip-abutted-right tooltip-abutted-top tooltip-abutted-bottom tooltip-element-attached-bottom tooltip-element-attached-center tooltip-target-attached-top tooltip-target-attached-center"
        style="top: 0px; left: 0px; position: absolute; transform: translateX(0px) translateY(0px) translateZ(0);"
      >
        <div
          aria-hidden="true"
          aria-live="polite"
          class="tooltip bdl-Tooltip"
          data-testid="bdl-Tooltip"
          id="tooltip19"
          role="tooltip"
        >
          test
        </div>
      </div>
      <div
        class="tooltip-element tooltip-enabled tooltip-abutted tooltip-abutted-left tooltip-abutted-right tooltip-abutted-top tooltip-abutted-bottom tooltip-element-attached-bottom tooltip-element-attached-center tooltip-target-attached-top tooltip-target-attached-center"
        style="top: 0px; left: 0px; position: absolute; transform: translateX(0px) translateY(0px) translateZ(0);"
      >
        <div
          aria-hidden="true"
          aria-live="polite"
          class="tooltip bdl-Tooltip"
          data-testid="bdl-Tooltip"
          id="tooltip20"
          role="tooltip"
        >
          hi
        </div>
      </div>
      <div
        class="tooltip-element tooltip-enabled tooltip-abutted tooltip-abutted-left tooltip-abutted-right tooltip-abutted-top tooltip-abutted-bottom tooltip-element-attached-bottom tooltip-element-attached-center tooltip-target-attached-top tooltip-target-attached-center"
        style="top: 0px; left: 0px; position: absolute; transform: translateX(0px) translateY(0px) translateZ(0);"
      >
        <div
          aria-hidden="true"
          aria-live="polite"
          class="tooltip bdl-Tooltip"
          data-testid="bdl-Tooltip"
          id="tooltip21"
          role="tooltip"
        >
          hi
        </div>
      </div>
      <div
        class="tooltip-element tooltip-enabled tooltip-abutted tooltip-abutted-left tooltip-abutted-right tooltip-abutted-top tooltip-abutted-bottom tooltip-element-attached-bottom tooltip-element-attached-center tooltip-target-attached-top tooltip-target-attached-center"
        style="top: 0px; left: 0px; position: absolute; transform: translateX(0px) translateY(0px) translateZ(0);"
      >
        <div
          aria-hidden="false"
          aria-live="polite"
          class="tooltip bdl-Tooltip"
          data-testid="bdl-Tooltip"
          id="tooltip22"
          role="tooltip"
        >
          hi
        </div>
      </div>
      <div
        class="tooltip-element tooltip-enabled tooltip-abutted tooltip-abutted-left tooltip-abutted-right tooltip-abutted-top tooltip-abutted-bottom tooltip-element-attached-bottom tooltip-element-attached-center tooltip-target-attached-top tooltip-target-attached-center"
        style="top: 0px; left: 0px; position: absolute; transform: translateX(0px) translateY(0px) translateZ(0);"
      >
        <div
          aria-hidden="false"
          aria-live="polite"
          class="tooltip bdl-Tooltip"
          data-testid="bdl-Tooltip"
          id="tooltip23"
          role="tooltip"
        >
          Im a long tooltip description
        </div>
      </div>
      <div
        class="tooltip-element tooltip-enabled tooltip-abutted tooltip-abutted-left tooltip-abutted-right tooltip-abutted-top tooltip-abutted-bottom tooltip-element-attached-bottom tooltip-element-attached-center tooltip-target-attached-top tooltip-target-attached-center"
        style="top: 0px; left: 0px; position: absolute; transform: translateX(0px) translateY(0px) translateZ(0);"
      >
        <div
          aria-hidden="false"
          aria-live="polite"
          class="tooltip bdl-Tooltip is-error"
          data-testid="bdl-Tooltip"
          id="tooltip24"
        >
          hi
        </div>
      </div>
    </body>
  }
  renderTarget={[Function]}
  targetAttachment="top center"
/>
`;

exports[`components/tooltip/Tooltip render() should render correctly with callout theme 1`] = `
<d
  attachment="bottom center"
  classPrefix="tooltip"
  constraints={
    [
      {
        "attachment": "together",
        "to": "window",
      },
    ]
  }
  renderElement={[Function]}
  renderElementTo={<body />}
  renderTarget={[Function]}
  targetAttachment="top center"
/>
`;

exports[`components/tooltip/Tooltip render() should render correctly with tetherElementClassName 1`] = `
<d
  attachment="bottom center"
  className="tether-element-class-name"
  classPrefix="tooltip"
  constraints={
    [
      {
        "attachment": "together",
        "to": "window",
      },
    ]
  }
  renderElement={[Function]}
  renderElementTo={
    <body>
      <div
        class="tooltip-element tooltip-enabled tooltip-abutted tooltip-abutted-left tooltip-abutted-right tooltip-abutted-top tooltip-abutted-bottom tooltip-element-attached-bottom tooltip-element-attached-center tooltip-target-attached-top tooltip-target-attached-center"
        style="top: 0px; left: 0px; position: absolute; transform: translateX(0px) translateY(0px) translateZ(0);"
      >
        <div
          aria-hidden="false"
          aria-live="polite"
          class="tooltip bdl-Tooltip"
          data-testid="bdl-Tooltip"
          id="tooltip7"
          role="tooltip"
        >
          hi
        </div>
      </div>
      <div
        data-tether-id="1"
        style="top: 0px; left: 0px; position: absolute;"
      />
      <div
        class="tooltip-element tooltip-enabled tooltip-abutted tooltip-abutted-left tooltip-abutted-right tooltip-abutted-top tooltip-abutted-bottom tooltip-element-attached-bottom tooltip-element-attached-center tooltip-target-attached-top tooltip-target-attached-center"
        style="top: 0px; left: 0px; position: absolute; transform: translateX(0px) translateY(0px) translateZ(0);"
      >
        <div
          aria-hidden="false"
          aria-live="polite"
          class="tooltip bdl-Tooltip"
          data-testid="bdl-Tooltip"
          id="tooltip8"
          role="tooltip"
        >
          hi
        </div>
      </div>
      <div
        class="tooltip-element tooltip-enabled tooltip-abutted tooltip-abutted-left tooltip-abutted-right tooltip-abutted-top tooltip-abutted-bottom tooltip-element-attached-bottom tooltip-element-attached-center tooltip-target-attached-top tooltip-target-attached-center"
        style="top: 0px; left: 0px; position: absolute; transform: translateX(0px) translateY(0px) translateZ(0);"
      >
        <div
          aria-hidden="false"
          aria-live="polite"
          class="tooltip bdl-Tooltip testing"
          data-testid="bdl-Tooltip"
          id="tooltip9"
          role="tooltip"
        >
          hi
        </div>
      </div>
      <div
        class="tooltip-element tooltip-enabled tooltip-abutted tooltip-abutted-left tooltip-abutted-right tooltip-abutted-top tooltip-abutted-bottom tooltip-element-attached-bottom tooltip-element-attached-center tooltip-target-attached-top tooltip-target-attached-center"
        style="top: 0px; left: 0px; position: absolute; transform: translateX(0px) translateY(0px) translateZ(0);"
      >
        <div
          aria-hidden="false"
          aria-live="polite"
          class="tooltip bdl-Tooltip"
          data-testid="bdl-Tooltip"
          id="tooltip15"
          role="tooltip"
        >
          hi
        </div>
      </div>
      <div
        class="tooltip-element tooltip-enabled tooltip-abutted tooltip-abutted-left tooltip-abutted-right tooltip-abutted-top tooltip-abutted-bottom tooltip-element-attached-bottom tooltip-element-attached-center tooltip-target-attached-top tooltip-target-attached-center"
        style="top: 0px; left: 0px; position: absolute; transform: translateX(0px) translateY(0px) translateZ(0);"
      >
        <div
          aria-hidden="false"
          aria-live="polite"
          class="tooltip bdl-Tooltip"
          data-testid="bdl-Tooltip"
          id="tooltip16"
          role="tooltip"
        >
          hi
        </div>
      </div>
      <div
        class="tooltip-element tooltip-enabled tooltip-abutted tooltip-abutted-left tooltip-abutted-right tooltip-abutted-top tooltip-abutted-bottom tooltip-element-attached-bottom tooltip-element-attached-center tooltip-target-attached-top tooltip-target-attached-center"
        style="top: 0px; left: 0px; position: absolute; transform: translateX(0px) translateY(0px) translateZ(0);"
      >
        <div
          aria-hidden="true"
          aria-live="polite"
          class="tooltip bdl-Tooltip"
          data-testid="bdl-Tooltip"
          id="tooltip17"
          role="tooltip"
        >
          hi
        </div>
      </div>
      <div
        class="tooltip-element tooltip-enabled tooltip-abutted tooltip-abutted-left tooltip-abutted-right tooltip-abutted-top tooltip-abutted-bottom tooltip-element-attached-bottom tooltip-element-attached-center tooltip-target-attached-top tooltip-target-attached-center"
        style="top: 0px; left: 0px; position: absolute; transform: translateX(0px) translateY(0px) translateZ(0);"
      >
        <div
          aria-hidden="true"
          aria-live="polite"
          class="tooltip bdl-Tooltip"
          data-testid="bdl-Tooltip"
          id="tooltip18"
          role="tooltip"
        >
          test
        </div>
      </div>
      <div
        class="tooltip-element tooltip-enabled tooltip-abutted tooltip-abutted-left tooltip-abutted-right tooltip-abutted-top tooltip-abutted-bottom tooltip-element-attached-bottom tooltip-element-attached-center tooltip-target-attached-top tooltip-target-attached-center"
        style="top: 0px; left: 0px; position: absolute; transform: translateX(0px) translateY(0px) translateZ(0);"
      >
        <div
          aria-hidden="true"
          aria-live="polite"
          class="tooltip bdl-Tooltip"
          data-testid="bdl-Tooltip"
          id="tooltip19"
          role="tooltip"
        >
          test
        </div>
      </div>
      <div
        class="tooltip-element tooltip-enabled tooltip-abutted tooltip-abutted-left tooltip-abutted-right tooltip-abutted-top tooltip-abutted-bottom tooltip-element-attached-bottom tooltip-element-attached-center tooltip-target-attached-top tooltip-target-attached-center"
        style="top: 0px; left: 0px; position: absolute; transform: translateX(0px) translateY(0px) translateZ(0);"
      >
        <div
          aria-hidden="true"
          aria-live="polite"
          class="tooltip bdl-Tooltip"
          data-testid="bdl-Tooltip"
          id="tooltip20"
          role="tooltip"
        >
          hi
        </div>
      </div>
      <div
        class="tooltip-element tooltip-enabled tooltip-abutted tooltip-abutted-left tooltip-abutted-right tooltip-abutted-top tooltip-abutted-bottom tooltip-element-attached-bottom tooltip-element-attached-center tooltip-target-attached-top tooltip-target-attached-center"
        style="top: 0px; left: 0px; position: absolute; transform: translateX(0px) translateY(0px) translateZ(0);"
      >
        <div
          aria-hidden="true"
          aria-live="polite"
          class="tooltip bdl-Tooltip"
          data-testid="bdl-Tooltip"
          id="tooltip21"
          role="tooltip"
        >
          hi
        </div>
      </div>
      <div
        class="tooltip-element tooltip-enabled tooltip-abutted tooltip-abutted-left tooltip-abutted-right tooltip-abutted-top tooltip-abutted-bottom tooltip-element-attached-bottom tooltip-element-attached-center tooltip-target-attached-top tooltip-target-attached-center"
        style="top: 0px; left: 0px; position: absolute; transform: translateX(0px) translateY(0px) translateZ(0);"
      >
        <div
          aria-hidden="false"
          aria-live="polite"
          class="tooltip bdl-Tooltip"
          data-testid="bdl-Tooltip"
          id="tooltip22"
          role="tooltip"
        >
          hi
        </div>
      </div>
      <div
        class="tooltip-element tooltip-enabled tooltip-abutted tooltip-abutted-left tooltip-abutted-right tooltip-abutted-top tooltip-abutted-bottom tooltip-element-attached-bottom tooltip-element-attached-center tooltip-target-attached-top tooltip-target-attached-center"
        style="top: 0px; left: 0px; position: absolute; transform: translateX(0px) translateY(0px) translateZ(0);"
      >
        <div
          aria-hidden="false"
          aria-live="polite"
          class="tooltip bdl-Tooltip"
          data-testid="bdl-Tooltip"
          id="tooltip23"
          role="tooltip"
        >
          Im a long tooltip description
        </div>
      </div>
      <div
        class="tooltip-element tooltip-enabled tooltip-abutted tooltip-abutted-left tooltip-abutted-right tooltip-abutted-top tooltip-abutted-bottom tooltip-element-attached-bottom tooltip-element-attached-center tooltip-target-attached-top tooltip-target-attached-center"
        style="top: 0px; left: 0px; position: absolute; transform: translateX(0px) translateY(0px) translateZ(0);"
      >
        <div
          aria-hidden="false"
          aria-live="polite"
          class="tooltip bdl-Tooltip is-error"
          data-testid="bdl-Tooltip"
          id="tooltip24"
        >
          hi
        </div>
      </div>
      <div
        class="tooltip-element tooltip-enabled tooltip-abutted tooltip-abutted-left tooltip-abutted-right tooltip-abutted-top tooltip-abutted-bottom tooltip-element-attached-bottom tooltip-element-attached-center tooltip-target-attached-top tooltip-target-attached-center"
        style="top: 0px; left: 0px; position: absolute; transform: translateX(0px) translateY(0px) translateZ(0);"
      >
        <div
          class="tooltip bdl-Tooltip"
          id="tooltip27"
          role="presentation"
        >
          <div
            aria-hidden="false"
            aria-live="polite"
            data-testid="bdl-Tooltip"
            role="tooltip"
          >
            hi
          </div>
        </div>
      </div>
      <div
        class="tooltip-element tooltip-enabled tooltip-abutted tooltip-abutted-left tooltip-abutted-right tooltip-abutted-top tooltip-abutted-bottom tooltip-element-attached-bottom tooltip-element-attached-center tooltip-target-attached-top tooltip-target-attached-center"
        style="top: 0px; left: 0px; position: absolute; transform: translateX(0px) translateY(0px) translateZ(0);"
      >
        <div
          aria-hidden="false"
          aria-live="polite"
          class="tooltip bdl-Tooltip"
          data-testid="bdl-Tooltip"
          id="tooltip28"
          role="tooltip"
        >
          hi
        </div>
      </div>
    </body>
  }
  renderTarget={[Function]}
  targetAttachment="top center"
/>
`;

exports[`components/tooltip/Tooltip render() should render with close button if isShown and showCloseButton are true 1`] = `
<d
  attachment="bottom center"
  classPrefix="tooltip"
  constraints={
    [
      {
        "attachment": "together",
        "to": "window",
      },
    ]
  }
  renderElement={[Function]}
  renderElementTo={<body />}
  renderTarget={[Function]}
  targetAttachment="top center"
/>
`;
